--- a/AuthenticationSystem/pom.xml
+++ b/AuthenticationSystem/pom.xml
@@ -16,6 +16,12 @@
             <version>2.10</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>2.7.3</version>
+        </dependency>
     </dependencies>
     <properties>
         <maven.compiler.source>9</maven.compiler.source>
